# peak-mentions

./: .gitignore  README.md  fabfile.py  pyproject.toml
dagster_project/: repository.py
dagster_project/assets/: dbt_assets.py
dagster_project/jobs/: dlt_job.py
dagster_project/resources/: dbt_resource.py  dlt_resource.py
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/models/dim/: dim_author.sql  dim_platform.sql
dbt_project/models/fct/: fct_author_likes_daily.sql  fct_top_urls.sql
dbt_project/models/staging/: sources.yml  stg_facebook_scraped.sql  stg_facebook_structured.sql  stg_mentions.sql  stg_reddit_scraped.sql  stg_reddit_structured.sql  stg_x_scraped.sql  stg_x_structured.sql
src/peak_mentions/: __init__.py
src/peak_mentions/api/: main.py
src/peak_mentions/api/endpoints/: facebook.py  reddit.py  x.py
src/peak_mentions/api/factories/: facebook_factory.py  reddit_factory.py  x_factory.py
src/peak_mentions/api/factories/scraped/: __init__.py  facebook_scraped.py  reddit_scraped.py  x_scraped.py
src/peak_mentions/api/models/: base.py  facebook.py  reddit.py  social.py  x.py
src/peak_mentions/connectors/: dlt_pipeline.py
src/peak_mentions/connectors/sources/: facebook.py  reddit.py  x.py
