[project]
name = "peak-mentions"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jitse-Jan", email = "jitsejan@protonmail.com" }
]
dependencies = [
    "polyfactory>=2.20.0",
    "fastapi>=0.115.12",
    "fabric>=3.2.2",
    "uvicorn>=0.34.0",
    "dlt[duckdb]>=1.9.0",
    "dbt[duckdb]>=1.0.0.38.34",
    "dbt-duckdb>=1.9.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/peak_mentions"]
